Fix panels on small screens, use autoprefixer gem

--- a/app/assets/stylesheets/core.scss
+++ b/app/assets/stylesheets/core.scss
@@ -35,4 +35,7 @@ img {
   padding: 15px;
   border: 1px solid $gray_extra_light;
   border-radius: 10px;
+  @media screen and (max-width: 35.5em) {
+    margin-bottom: 15px;
+  }
 }
